# ersatz-gif-rating

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
data/: cross-tier-example.json  example-input.json
leaderboard_video/: cli.py  preview.py  server.py
tools/: record_video.mjs
web/: app.js  index.html  styles.css
