[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "leaderboard-video"
version = "0.1.0"
description = "Local leaderboard animation renderer that exports MP4 videos."
readme = "README.md"
requires-python = ">=3.13"

[tool.setuptools]
packages = ["leaderboard_video"]
